--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,26 @@
     :root{
---prymary-font: 'Roboto';
+--prymary-font-weight: 700;
+--prymary-font-size: 20px;
 --logo-font-family: 'Raleway';
 --logo-font-weight: 800;
 --logo-font-size: 18px;
---prymary-font-weight: 700;
---prymary-font-size: 20px;
 --normal-font-weight: 500;
 --mini-font-size: 16px;
---accent-color: #4D5AE5;
---accent-background-color: #404BBF;
---prymary-font-color:  #2E2F42;
---address-font-color: #434455;
---pressed-state-color: #FFFFFF;
---btn-background-color: #F4F4FD;
---background-color: #E5E5E5;
---font-color: #E7E9FC
+--title-color: #2E2F42;
+--text-color: #434455;
+--accent-color: #404BBF;
+--pressed-color: #4D5AE5;
+--btn-background: #F4F4FD;
+--background-color: #FFFFFF;
+--headings-light: #E5E5E5;
+--text-footer-color: #E7E9FC;
 }
 
 body{
-    font-family: var(--prymary-font),
-    sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: 
     var(--background-color);
-    color: var(--prymary-font-color);
+    color: var(--title-color);
     
 }
 
@@ -32,7 +30,13 @@ body{
 
 .link {
     text-decoration: none;
-    color: var(--prymary-font-color);
+}
+.link:hover,
+.link:focus {
+    color: var(--text-color);
+}
+.link:active{
+    color: var(--pressed-color); ;
 }
 
 .visually-hidden {
@@ -53,6 +57,9 @@ body{
     var(--prymary-font-weight);
     font-size: 36px;
     line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .subtitle {
@@ -60,81 +67,87 @@ body{
     var(--normal-font-weight);
     font-size: 20px;
     line-height: 1.2;
+    color: var(--title-color);
 }
 
 .text {
     font-size: var(--mini-font-size);
     line-height: 1.5;
-    color: var(--address-font-color);
+    color: var(--text-color);
+}
+
+.headings-light {
+    background-color: 
+    var(--headings-light);
 }
 
 /* ========HEADER=========== */
-.header {
-    background-color: 
-    var(--pressed-state-color);
-}
+
 .logo {
     font-family: var(--logo-font-family);
     font-weight: var(--logo-font-size);
     font-size: 18px;
     line-height: 1.33;
 }
-
 .logo-accent {
-    color: var(--accent-color);
+    color: var(--pressed-color);
 }
 .address {
-    color: var(--address-font-color);
+    color: var(--text-color);
 }
 /* ========HEADER/=========== */
 
 /* ========HERO=========== */
 .hero {
     background-color:
-    var(--prymary-font-color);
+    var(--title-color);
 }
 .hero-title {
     font-weight: 
     var(--prymary-font-weight);
     font-size: 56px;
     line-height: 1.07;
-    color: var(--pressed-state-color);
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--background-color);
 }
 /* ========HERO/=========== */
 
 /* ========BUTTONS========== */
-.link:hover,
-.link:focus {
-    color: var(--pressed-state-color);
-}
 .btn-order{
-    background: var(--accent-color);
-    color: var(--pressed-state-color);
+    background: var(--pressed-color);
+    color: var(--background-color);
+    cursor: pointer;
 }
 .btn {
-    background: var(--btn-background-color);
-    color: var(--accent-color);
+    background: var(--btn-background);
+    color: var(--pressed-color);
     cursor: pointer;
 }
 .btn:hover,
 .btn:focus {
     background-color: 
-    var(--accent-background-color);
-    color: var(--pressed-state-color);
+    var(--pressed-color);
+    color: var(--background-color);
+}
+.btn:active{
+    background-color: 
+    var(--accent-color);
+    color: var(--background-color);
 }
 /* ========BUTTONS/======== */
 /* ==========TEAM========== */
 .team {
     background-color: 
-    var(--btn-background-color);
+    var(--btn-background);
 }
 /* ==========TEAM========== */
 /* ==========FOOTER========== */
 .footer {
     background-color: 
-    var(--prymary-font-color);
+    var(--title-color);
 }
 .footer-text {
-    color: var(--font-color);
+    color: var(--text-footer-color);
 }
 /* ==========FOOTER/========= */
