--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,10 @@ body{
 
 .link {
     text-decoration: none;
+    font-family: inherit;
+    color: var(--title-color);
 }
+
 
 .link:hover,
 .link:focus {
@@ -108,6 +111,7 @@ body{
 
 /* ========BUTTONS========== */
 .btn-order {
+    font-family: inherit;
     background: var(--pressed-color);
     color: var(--background-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -115,10 +119,12 @@ body{
     cursor: pointer;
 }
 .btn-filter {
+    font-family: inherit;
     background: var(--btn-background);
     color: var(--pressed-color);
     cursor: pointer;
-    border: 1px solid #E7E9FC;
+    border: 1px solid 
+    var(--text-footer-color);
     border-radius: 4px;
 }
 .btn-filter:hover,
@@ -128,7 +134,9 @@ body{
     background-color: 
     var(--pressed-color);
     color: var(--background-color);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 4px;
 }
 .btn:active{
@@ -168,6 +176,10 @@ body{
     var(--title-color);
 }
 .logo-footer {
+    font-family:'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
     color: var(--btn-background);
 }
 .footer-text {
