--- a/css/styles.css
+++ b/css/styles.css
@@ -1,188 +1,145 @@
-    :root {
---title-color: #2E2F42;
---text-color: #434455;
---accent-color: #404BBF;
---pressed-color: #4D5AE5;
---btn-background: #F4F4FD;
---background-color: #FFFFFF;
---headings-light: #E5E5E5;
---text-footer-color: #E7E9FC;
+:root {
+  --color-primary: #2e2f42;
+  --link-secondary: #434455;
+  --link-hover: #404bbf;
+  --background-calar-hero: #2e2f42;
+  --color-text-hero: #ffffff;
+  --color-text-footer: #e7e9fc;
+  --background-color-btn-hero: #4d5ae5;
+  --color-text-features-p: #434455;
+  --background-color-primary: #ffffff;
+  --background-color-our-team: #f4f4fd;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color: 
-    var(--background-color);
-    color: var(--title-color);
-    
+body {
+  color: var(--color-primary);
+  background-color: var(--background-color-primary);
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
 }
-
-.list {
-    list-style: none;
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
-
+ul {
+  list-style-type: none;
+}
+.logo {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.3;
+  font-family: "Raleway", sans-serif;
+  color: var(--background-calar-hero);
+  text-transform: uppercase;
+}
+.logo-Web {
+  color: var(--background-color-btn-hero);
+}
+.link-first,
 .link {
-    text-decoration: none;
-    font-family: inherit;
-    color: var(--title-color);
+  text-decoration: none;
+  font-style: normal;
+  color: var(--color-primary);
+  font-weight: 500;
+  line-height: 1.5;
 }
 
-
+.link-first:hover,
+.link-first:focus {
+  color: var(--link-hover);
+}
+.link {
+  color: var(--link-secondary);
+  font-weight: 400;
+}
 .link:hover,
 .link:focus {
-    color: var(--text-color);
+  color: var(--link-hover);
 }
-
-.link:active{
-    color: var(--pressed-color); ;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-}
-
-.subtitle {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    color: var(--title-color);
-}
-
-.text {
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--text-color);
-}
-
-.headings-light {
-    background-color: 
-    var(--background-color);
-}
-
-/* ========HEADER=========== */
-
-.logo {
-    font-family:'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-}
-.logo-accent {
-    color: var(--pressed-color);
-}
-.address {
-    font-style: normal;
-    color: var(--text-color);
-}
-/* ========HEADER/=========== */
-
-/* ========HERO=========== */
+/* =====main===== */
 .hero {
-    background-color:
-    var(--title-color);
+  background-color: var(--background-calar-hero);
 }
-.hero-title {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--background-color);
+.hero h1 {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: var(--color-text-hero);
 }
-/* ========HERO/=========== */
-
-/* ========BUTTONS========== */
-.btn-order {
-    font-family: inherit;
-    background: var(--pressed-color);
-    color: var(--background-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
+.hero button {
+  background-color: var(--background-color-btn-hero);
+  color: var(--color-text-hero);
+  line-height: 1.5;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
 }
-.btn-filter {
-    font-family: inherit;
-    background: var(--btn-background);
-    color: var(--pressed-color);
-    cursor: pointer;
-    border: 1px solid 
-    var(--text-footer-color);
-    border-radius: 4px;
+.hero button:hover,
+.hero button:focus {
+  background-color: var(--link-hover);
 }
-.btn-filter:hover,
-.btn-filter:focus,
-.btn-order:hover,
-.btn-order:focus {
-    background-color: 
-    var(--pressed-color);
-    color: var(--background-color);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 4px;
+.text-features-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--color-primary);
 }
-.btn:active{
-    background-color: 
-    var(--accent-color);
-    color: var(--background-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+.text-features-p {
+  color: var(--color-text-features-p);
 }
-
-/* ========BUTTONS/======== */
-
-/* ==========TEAM========== */
-.team {
-    background-color: 
-    var(--btn-background);
+.text-what-are,
+.text-our-team {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  text-align: center;
 }
-.team-card {
-    background-color: 
-    var(--background-color);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
+.section-our-team h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
-/* ==========TEAM/========== */
-
-/* ======OPPORTUNITIES====== */
-.project-card {
-    background-color: 
-    var(--background-color);
-    border: 1px solid #E7E9FC;
+.section-our-team {
+  background-color: var(--background-color-our-team);
 }
-/* ======OPPORTUNITIES/====== */
-
-/* ==========FOOTER========== */
-.footer {
-    background-color: 
-    var(--title-color);
+.section-our-team p {
+  color: var(--color-text-features-p);
 }
-.logo-footer {
-    font-family:'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-    color: var(--btn-background);
+/* =====footer===== */
+footer {
+  background-color: var(--background-calar-hero);
+}
+.logo-footer-studio {
+  color: var(--background-color-our-team);
 }
 .footer-text {
-    color: var(--text-footer-color);
+  color: var(--color-text-footer);
 }
-/* ==========FOOTER/========= */
+/* =====portfolio===== */
+.filter button {
+  background-color: var(--background-color-our-team);
+  color: var(--background-color-btn-hero);
+  border-color: var(--color-text-footer);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.filter button:hover,
+.filter button:focus {
+  background-color: var(--link-hover);
+  color: var(--color-text-hero);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
+}
+.filter ul li a {
+  text-decoration: none;
+}
