--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --color-primary: #2e2f42;
   --link-secondary: #434455;
   --link-hover: #404bbf;
+  --link-hover-address: #4d5ae5;
   --background-color-hero: #2e2f42;
   --color-text-hero: #ffffff;
   --color-text-footer: #e7e9fc;
@@ -31,52 +32,60 @@ body {
 }
 .logo {
   text-decoration: none;
-  font-size: 18px;
-  font-weight: 800;
-  line-height: 1.3;
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
   color: var(--background-color-hero);
   text-transform: uppercase;
 }
 .logo-web {
   color: var(--background-color-btn-hero);
 }
-.link-first,
 .link {
+  text-decoration: none;
+}
+.link-first {
   text-decoration: none;
   font-style: normal;
   color: var(--color-primary);
   font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
-
 .link-first:hover,
 .link-first:focus {
-  color: var(--link-hover);
-}
-.link {
   color: var(--link-secondary);
-  font-weight: 400;
 }
-.link:hover,
-.link:focus {
-  color: var(--link-hover);
+.link-address {
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--link-secondary);
+}
+.link-address:hover,
+.link-address:focus {
+  color: var(--link-hover-address);
 }
 /* =====main===== */
 .hero {
-  background-color: var(--background-color-hero);
+  background-color: 
+  var(--background-color-hero);
 }
 .hero-title {
-  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
+  letter-spacing: 0.02em;
   color: var(--color-text-hero);
 }
 .btn-hero {
   background-color: var(--background-color-btn-hero);
   color: var(--color-text-hero);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0.04em;
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -85,48 +94,60 @@ body {
 .btn-hero:focus {
   background-color: var(--link-hover);
 }
-.features-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  color: var(--color-primary);
-}
-.text-features {
-  color: var(--color-text-features);
-}
 .text-what-are,
 .title-our-team {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
+  letter-spacing: 0.02em;
   text-align: center;
 }
+.features-title,
 .name-our-team {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .section-our-team {
-  background-color: var(--background-color-our-team);
+  background-color: 
+  var(--background-color-our-team);
 }
+.text-features,
 .text-our-team {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--color-text-features);
 }
 /* =====footer===== */
 .footer {
   background-color: var(--background-color-hero);
 }
+.logo-footer {
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 .logo-footer-studio {
   color: var(--background-color-our-team);
 }
 .footer-text {
   color: var(--color-text-footer);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 /* =====portfolio===== */
-.filter-btn
- {
+.filter-btn {
   background-color: var(--background-color-our-team);
   color: var(--background-color-btn-hero);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   border-color: var(--color-text-footer);
   border-style: solid;
   border-width: 1px;
@@ -137,5 +158,6 @@ body {
 .filter-btn:focus {
   background-color: var(--link-hover);
   color: var(--color-text-hero);
+  border-color: var(--link-hover);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
