--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body {
   color: var(--color-text-hero);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   border-radius: 4px;
